--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,82 +37,196 @@ jobs:
           tar --zstd -xf sdk.tar.zst
           mv openwrt-sdk-* sdk
 
-      - name: Setup feeds
+      - name: Setup feeds with local source
         run: |
           cd sdk
-          # Add nodewatcher feed
-          echo "src-git nodewatcher https://github.com/valentt/firmware-packages-opkg.git" >> feeds.conf.default
-          # Update nodewatcher and base feeds
-          ./scripts/feeds update nodewatcher || true
-          # Install nodewatcher-agent with dependencies
-          ./scripts/feeds install -a -p nodewatcher || true
+          # Create custom feed pointing to local source
+          mkdir -p feeds/nodewatcher/util/nodewatcher-agent
+
+          # Create Makefile for the package
+          cat > feeds/nodewatcher/util/nodewatcher-agent/Makefile << 'MAKEFILE_EOF'
+          include $(TOPDIR)/rules.mk
+
+          PKG_NAME:=nodewatcher-agent
+          PKG_VERSION:=2024-12-23
+          PKG_RELEASE:=1
+
+          PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
+          CMAKE_INSTALL:=1
+          PKG_BUILD_PARALLEL:=1
+
+          include $(INCLUDE_DIR)/package.mk
+          include $(INCLUDE_DIR)/cmake.mk
+
+          define Package/nodewatcher-agent/default
+            SECTION:=utils
+            CATEGORY:=Base system
+            TITLE:=Nodewatcher agent daemon
+            DEPENDS:=+libubus +libubox +libjson-c
+          endef
+
+          define Package/nodewatcher-agent
+            $(Package/nodewatcher-agent/default)
+            DEPENDS+= +libuci +libblobmsg-json
+          endef
+
+          define Package/nodewatcher-agent/description
+            Nodewatcher agent daemon
+          endef
+
+          define Package/nodewatcher-agent/conffiles
+          /etc/config/nodewatcher
+          endef
+
+          define Build/Prepare
+          	mkdir -p $(PKG_BUILD_DIR)
+          	$(CP) $(CURDIR)/src/* $(PKG_BUILD_DIR)/
+          endef
+
+          define Package/nodewatcher-agent/install
+          	$(INSTALL_DIR) $(1)/usr/bin
+          	$(INSTALL_BIN) $(PKG_BUILD_DIR)/nodewatcher-agent $(1)/usr/bin/nodewatcher-agent
+          	$(INSTALL_DIR) $(1)/usr/lib
+          	$(INSTALL_BIN) $(PKG_BUILD_DIR)/libnodewatcher-agent-common.so $(1)/usr/lib/
+          	$(INSTALL_DIR) $(1)/etc/init.d
+          	$(INSTALL_DIR) $(1)/etc/config
+          	$(INSTALL_DIR) $(1)/www/nodewatcher
+          endef
+
+          # 1: module name
+          # 2: extra dependencies
+          # 3: module title/description
+          define BuildModule
+
+            define Package/nodewatcher-agent-mod-$(1)
+              $(Package/nodewatcher-agent/default)
+              TITLE+= ($(1) module)
+              DEPENDS+=nodewatcher-agent $(2)
+            endef
+
+            define Package/nodewatcher-agent-mod-$(1)/description
+              $(3)
+            endef
+
+            define Package/nodewatcher-agent-mod-$(1)/install
+          	$(INSTALL_DIR) $$(1)/usr/lib/nodewatcher-agent
+          	$(INSTALL_BIN) $(PKG_BUILD_DIR)/$(1).so $$(1)/usr/lib/nodewatcher-agent/
+            endef
+
+            $$(eval $$(call BuildPackage,nodewatcher-agent-mod-$(1)))
+
+          endef
+
+          $(eval $(call BuildPackage,nodewatcher-agent))
+          $(eval $(call BuildModule,general,,Provides general system info.))
+          $(eval $(call BuildModule,resources,,Provides system resource usage info.))
+          $(eval $(call BuildModule,interfaces,netifd,Provides network interface info.))
+          $(eval $(call BuildModule,wireless,libiwinfo,Provides wireless interface info.))
+          $(eval $(call BuildModule,keys_ssh,,Provides SSH key info.))
+          $(eval $(call BuildModule,clients,,Provides client info.))
+          $(eval $(call BuildModule,http_push,libcurl,Provides HTTP push support.))
+          $(eval $(call BuildModule,routing_babel,,Provides Babel routing info.))
+          $(eval $(call BuildModule,routing_olsr,,Provides OLSR routing info.))
+          MAKEFILE_EOF
+
+          # Copy local source to the package
+          mkdir -p feeds/nodewatcher/util/nodewatcher-agent/src
+          cp -r ../nodewatcher-agent/* feeds/nodewatcher/util/nodewatcher-agent/src/
+
+          # Add feed to config
+          echo "src-link nodewatcher $(pwd)/feeds/nodewatcher" >> feeds.conf.default
+
+          # Update and install feed
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a -p nodewatcher
 
       - name: Download and install dependencies
         run: |
           cd sdk
-          STAGING_DIR="staging_dir/target-mips_24kc_musl"
+          STAGING_DIR="$(pwd)/staging_dir/target-mips_24kc_musl"
           PKG_BASE="https://downloads.openwrt.org/releases/${OPENWRT_VERSION}/packages/mips_24kc/base"
           TARGET_BASE="https://downloads.openwrt.org/releases/${OPENWRT_VERSION}/targets/${TARGET}/${SUBTARGET}/packages"
 
           # Create directories
           mkdir -p tmp_pkgs
-          mkdir -p "${STAGING_DIR}/usr/lib" "${STAGING_DIR}/usr/include"
+          mkdir -p "${STAGING_DIR}/lib"
+          mkdir -p "${STAGING_DIR}/usr/lib"
+          mkdir -p "${STAGING_DIR}/usr/include"
 
           # Download required packages
           echo "Downloading dependency packages..."
-          wget -q "${PKG_BASE}/libubox_2024-09-16-9e52171d-1_mips_24kc.ipk" -O tmp_pkgs/libubox.ipk || true
-          wget -q "${PKG_BASE}/libubus_2024-09-01-9913aa61-1_mips_24kc.ipk" -O tmp_pkgs/libubus.ipk || true
-          wget -q "${PKG_BASE}/libuci_2024-10-10-c8d13d65-1_mips_24kc.ipk" -O tmp_pkgs/libuci.ipk || true
-          wget -q "${PKG_BASE}/libjson-c5_0.18-1_mips_24kc.ipk" -O tmp_pkgs/libjson-c.ipk || true
-          wget -q "${PKG_BASE}/libblobmsg-json_2024-09-16-9e52171d-1_mips_24kc.ipk" -O tmp_pkgs/libblobmsg-json.ipk || true
-          wget -q "${TARGET_BASE}/libiwinfo_2024-10-20-c45bf3fc-1_mips_24kc.ipk" -O tmp_pkgs/libiwinfo.ipk || true
-          wget -q "${PKG_BASE}/libcurl4_8.10.1-1_mips_24kc.ipk" -O tmp_pkgs/libcurl.ipk || true
+          wget -q "${PKG_BASE}/libubox_2024-09-16-9e52171d-1_mips_24kc.ipk" -O tmp_pkgs/libubox.ipk
+          wget -q "${PKG_BASE}/libubus_2024-09-01-9913aa61-1_mips_24kc.ipk" -O tmp_pkgs/libubus.ipk
+          wget -q "${PKG_BASE}/libuci_2024-10-10-c8d13d65-1_mips_24kc.ipk" -O tmp_pkgs/libuci.ipk
+          wget -q "${PKG_BASE}/libjson-c5_0.18-1_mips_24kc.ipk" -O tmp_pkgs/libjson-c.ipk
+          wget -q "${PKG_BASE}/libblobmsg-json_2024-09-16-9e52171d-1_mips_24kc.ipk" -O tmp_pkgs/libblobmsg-json.ipk
+          wget -q "${TARGET_BASE}/libiwinfo_2024-10-20-c45bf3fc-1_mips_24kc.ipk" -O tmp_pkgs/libiwinfo.ipk
+          wget -q "${PKG_BASE}/libcurl4_8.10.1-1_mips_24kc.ipk" -O tmp_pkgs/libcurl.ipk
 
-          # Extract and install packages
+          # Extract and install packages using absolute paths
+          echo "Extracting packages..."
           for pkg in tmp_pkgs/*.ipk; do
             if [ -f "$pkg" ]; then
-              echo "Extracting $pkg..."
+              echo "Processing $pkg..."
+              rm -rf tmp_extract
               mkdir -p tmp_extract
-              cd tmp_extract
-              ar x "../$pkg" 2>/dev/null || true
-              tar xzf data.tar.gz 2>/dev/null || tar xJf data.tar.xz 2>/dev/null || true
-              # Copy libraries
-              cp -rf usr/lib/* "../${STAGING_DIR}/usr/lib/" 2>/dev/null || true
-              cp -rf lib/* "../${STAGING_DIR}/lib/" 2>/dev/null || true
-              cd ..
+              (
+                cd tmp_extract
+                ar x "../$pkg"
+                # Try both compression formats
+                zstd -d data.tar.zst -o data.tar 2>/dev/null || \
+                gzip -d data.tar.gz 2>/dev/null || \
+                xz -d data.tar.xz 2>/dev/null || true
+                tar xf data.tar 2>/dev/null || true
+              )
+              # Copy libraries using absolute paths
+              if [ -d "tmp_extract/usr/lib" ]; then
+                cp -rf tmp_extract/usr/lib/* "${STAGING_DIR}/usr/lib/" 2>/dev/null || true
+              fi
+              if [ -d "tmp_extract/lib" ]; then
+                cp -rf tmp_extract/lib/* "${STAGING_DIR}/lib/" 2>/dev/null || true
+              fi
               rm -rf tmp_extract
             fi
           done
 
-          # Download and install header packages (development files)
+          # Download and install header packages
           echo "Downloading header packages..."
-          wget -q "${PKG_BASE}/libubox-dev_2024-09-16-9e52171d-1_mips_24kc.ipk" -O tmp_pkgs/libubox-dev.ipk || true
-          wget -q "${PKG_BASE}/libubus-dev_2024-09-01-9913aa61-1_mips_24kc.ipk" -O tmp_pkgs/libubus-dev.ipk || true
-          wget -q "${PKG_BASE}/libuci-dev_2024-10-10-c8d13d65-1_mips_24kc.ipk" -O tmp_pkgs/libuci-dev.ipk || true
+          wget -q "${PKG_BASE}/libubox-dev_2024-09-16-9e52171d-1_mips_24kc.ipk" -O tmp_pkgs/libubox-dev.ipk
+          wget -q "${PKG_BASE}/libubus-dev_2024-09-01-9913aa61-1_mips_24kc.ipk" -O tmp_pkgs/libubus-dev.ipk
+          wget -q "${PKG_BASE}/libuci-dev_2024-10-10-c8d13d65-1_mips_24kc.ipk" -O tmp_pkgs/libuci-dev.ipk
 
           for pkg in tmp_pkgs/*-dev.ipk; do
             if [ -f "$pkg" ]; then
-              echo "Extracting $pkg..."
+              echo "Processing $pkg..."
+              rm -rf tmp_extract
               mkdir -p tmp_extract
-              cd tmp_extract
-              ar x "../$pkg" 2>/dev/null || true
-              tar xzf data.tar.gz 2>/dev/null || tar xJf data.tar.xz 2>/dev/null || true
-              cp -rf usr/include/* "../${STAGING_DIR}/usr/include/" 2>/dev/null || true
-              cd ..
+              (
+                cd tmp_extract
+                ar x "../$pkg"
+                zstd -d data.tar.zst -o data.tar 2>/dev/null || \
+                gzip -d data.tar.gz 2>/dev/null || \
+                xz -d data.tar.xz 2>/dev/null || true
+                tar xf data.tar 2>/dev/null || true
+              )
+              if [ -d "tmp_extract/usr/include" ]; then
+                cp -rf tmp_extract/usr/include/* "${STAGING_DIR}/usr/include/" 2>/dev/null || true
+              fi
               rm -rf tmp_extract
             fi
           done
 
           # List what we have
-          echo "Libraries installed:"
-          ls -la "${STAGING_DIR}/usr/lib/" || true
-          echo "Headers installed:"
-          ls -la "${STAGING_DIR}/usr/include/" || true
+          echo "=== Libraries in ${STAGING_DIR}/lib/ ==="
+          ls -la "${STAGING_DIR}/lib/" 2>/dev/null || echo "No files"
+          echo "=== Libraries in ${STAGING_DIR}/usr/lib/ ==="
+          ls -la "${STAGING_DIR}/usr/lib/" 2>/dev/null || echo "No files"
+          echo "=== Headers in ${STAGING_DIR}/usr/include/ ==="
+          ls -la "${STAGING_DIR}/usr/include/" 2>/dev/null || echo "No files"
 
       - name: Configure SDK
         run: |
           cd sdk
-          # Disable default package selections
           cat >> .config << 'EOF'
           CONFIG_SIGNED_PACKAGES=n
           CONFIG_PACKAGE_nodewatcher-agent=m
